--- a/.github/workflows/Create.yml
+++ b/.github/workflows/Create.yml
@@ -15,7 +15,7 @@
             with: 
               aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
               aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              aws_region: us-west-1
+              aws_region:  ${{ secrets.AWS_REGION }}
           - name: set up Terraform
             uses: hashicorp/setup-terraform@v2
           - name: Terraform Init
